update manta merger